fix: fix header z-index

--- a/online-zoo/assets/styles/_header.scss
+++ b/online-zoo/assets/styles/_header.scss
@@ -89,6 +89,7 @@
 @media screen and (max-width: 999px) {
   .header {
     position: fixed;
+    z-index: 1000;
     display: flex;
     align-items: center;
     height: 34px;
