--- a/online-zoo/pages/donate/style.css
+++ b/online-zoo/pages/donate/style.css
@@ -271,6 +271,7 @@ html {
 @media screen and (max-width: 999px) {
   .header {
     position: fixed;
+    z-index: 1000;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
