--- a/online-zoo/pages/petstory/style.css
+++ b/online-zoo/pages/petstory/style.css
@@ -185,6 +185,7 @@ html {
 @media screen and (max-width: 999px) {
   .header {
     position: fixed;
+    z-index: 1000;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
